5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1764_1185.log
== SUBMITION (2019-05-28 13:43:22) 
-- CODE:
from numpy import*
NG = array()
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.478946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1185/main.py", line 2, in <module>
    NG = array()
TypeError: Required argument 'object' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:43:23) 
-- CODE:
from numpy import*
NG = array()
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:43:39) 
-- CODE:
from numpy import*
NG = array("")
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:43:42) 
-- CODE:
from numpy import*
NG = array("")
i = 0
n = 0
while(i < size(NG)):
	if(NG[i] > 99 ):
		print(i)
		n = n + 1
	i = i + 1
print(n)
-- EXECUTION TIME:
0.597855
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1185/main.py", line 6, in <module>
    if(NG[i] > 99 ):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:02:41) 
-- CODE:
from numpy import*
a = array("")
b = 0
c = 0
while(i < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:02:51) 
-- CODE:
from numpy import*
a = array("")
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- EXECUTION TIME:
0.381517
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1185/main.py", line 6, in <module>
    if(a[b] > 99 ):
IndexError: too many indices for array

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:02:51) 
-- CODE:
from numpy import*
a = array("")
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:03:59) 
-- CODE:
from numpy import*
a = array(eval(input("glicose"))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- ERROR:
File "XXXX", line 3
    b = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:04:13) 
-- CODE:
from numpy import*
a = array(eval(input("glicose"))
d = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- ERROR:
File "XXXX", line 3
    d = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:04:17) 
-- CODE:
from numpy import*
a = array(eval(input("glicose"))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- EXECUTION TIME:
0.160148
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    b = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:04:17) 
-- CODE:
from numpy import*
a = array(eval(input("glicose"))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- EXECUTION TIME:
0.113407
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    b = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:04:17) 
-- CODE:
from numpy import*
a = array(eval(input("glicose"))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- ERROR:
File "XXXX", line 3
    b = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:04:17) 
-- CODE:
from numpy import*
a = array(eval(input("glicose"))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- EXECUTION TIME:
0.111058
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    b = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:04:18) 
-- CODE:
from numpy import*
a = array(eval(input("glicose"))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- EXECUTION TIME:
0.190673
-- ERROR:
  File "/home/codebench/codes/1764/1185/main.py", line 3
    b = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:04:18) 
-- CODE:
from numpy import*
a = array(eval(input("glicose"))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- ERROR:
File "XXXX", line 3
    b = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:04:27) 
-- CODE:
from numpy import*
a = array(eval(input("glicose")))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:04:37) 
-- CODE:
from numpy import*
a = array(eval(input("glicose:")))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	c = c + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 14:06:21) 
-- CODE:
from numpy import*
a = array(eval(input("glicose:")))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	b = b + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 14:06:41) 
-- CODE:
from numpy import*
a = array(eval(input("glicose:")))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	b = b + 1
print(c)
-- EXECUTION TIME:
0.393347
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 13:32:19) 
-- CODE:
from numpy import*
a = array(eval(input("glicose:")))
b = 0
c = 0
while(b < size(a)):
	if(a[b] > 99 ):
		print(b)
		c = c + 1
	b = b + 1
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
